# uncontainerizable

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  biome.jsonc  lefthook.yml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  turbo.json
.changeset/: README.md  bundle-preempt-external.md  config.json  linux-and-windows-platforms.md  macos-launch-services.md
.github/workflows/: ci.yml  release.yml
crates/uncontainerizable-core/: Cargo.toml
crates/uncontainerizable-core/examples/: test-child.rs
crates/uncontainerizable-core/src/: adapter.rs  app.rs  container.rs  error.rs  identity.rs  lib.rs  probe.rs
crates/uncontainerizable-core/tests/: darwin.rs  darwin_bundle.rs  linux.rs  win32.rs
crates/uncontainerizable-node/: CHANGELOG.md  Cargo.toml  README.md  package.json
crates/uncontainerizable-node/src/: adapter_bridge.rs  app.rs  container.rs  errors.rs  lib.rs  types.rs
crates/uncontainerizable-node/tests/: package_json_invariants.rs
documents/: development-plan.md
