[workspace]
members = ["crates/uncontainerizable-core", "crates/uncontainerizable-node"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/inakineitor/uncontainerizable"
rust-version = "1.85"

[workspace.dependencies]
async-trait = "0.1"
futures = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "time", "sync"] }
kill_tree = { version = "0.2", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
napi = { version = "3", default-features = false, features = ["napi4", "async", "tokio_rt"] }
napi-derive = "3"
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
