[package]
name = "uncontainerizable-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Graceful process lifecycle for programs that can't be containerized"

[dependencies]
async-trait.workspace = true
futures.workspace = true
thiserror.workspace = true
tokio.workspace = true
kill_tree.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal", "process"] }

[target.'cfg(target_os = "linux")'.dependencies]
cgroups-rs = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
