[package]
name = "uncontainerizable-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "napi-rs bindings for uncontainerizable-core"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi.workspace = true
napi-derive.workspace = true
uncontainerizable-core = { path = "../uncontainerizable-core" }

[build-dependencies]
napi-build.workspace = true
